Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- create a property to control the creation of a calendar when creating an user
  home folder
Bug fixes:
~~~~~~~~~~
- The date display in the weekly view now always uses two lines, one for weekday
  and date, one for month.
- Some fixes for better french in the translations.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-